--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
     <p class="info-text">Double click on a note to remove it.</p>
     <div class="app" id="app">
         <div class="note" id="note">
-            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..."></textarea>
+            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
+            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
+            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
+            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
+            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
+            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
         </div>
+        <button class="addBtn" id="addBtn">Add</button>
+        <button class="editBtn" id="editBtn">Edit</button>
+        <button class="saveBtn" id="saveBtn">Save</button>
+        <button class="deleteBtn" id="deleteBtn">Delete</button>
     </div>
 
     <script src="script.js"></script>
