Simplified btns for now

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
             <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
             <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
         </div>
-        <button class="addBtn" id="addBtn">Add</button>
-        <button class="editBtn" id="editBtn">Edit</button>
-        <button class="saveBtn" id="saveBtn">Save</button>
-        <button class="deleteBtn" id="deleteBtn">Delete</button>
+        <button class="btn" id="btn">+</button>
     </div>
 
     <script src="script.js"></script>
