--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Note App</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1 class="heading">Note App</h1>
     <p class="info-text">Double click on a note to remove it.</p>
     <div class="app" id="app">
-        <div class="note" id="note">
-            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
-            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
-            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
-            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
-            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
-            <textarea class="textarea" id="textarea" placeholder="Create a new note by typing or pasting here..." cols="30" rows="10"></textarea>
-        </div>
-        <button class="btn" id="btn">+</button>
+      <!-- <textarea
+        cols="30"
+        rows="10"
+        class="note"
+        placeholder="Empty Note"
+      ></textarea> -->
+      <button class="btn" id="btn">+</button>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
